Add gitea installation script

--- a/.env
+++ b/.env
@@ -26,10 +26,24 @@ KEYCLOAK__HTTP_PORT=80
 KEYCLOAK__HTTPS_PORT=443
 KEYCLOAK__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
 KEYCLOAK__DATABASE_PORT=${CNPG__DATABASE_PORT}
-KEYCLOAK__DATABASE_NAME=${CNPG__DATABASE_NAME}
+KEYCLOAK__DATABASE_NAME=keycloak
 KEYCLOAK__DATABASE_SCHEMA=${CNPG__DATABASE_SCHEMA}
 KEYCLOAK__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 KEYCLOAK__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 KEYCLOAK__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 KEYCLOAK__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
 # Redis (인증용으로만 사용할 것이라면 지양하기)
+
+# Gitea
+GITEA__NAMESPACE=gitea
+GITEA__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
+GITEA__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
+GITEA__ADMIN_EMAIL=inho.kim@makinarocks.ai
+GITEA__HTTP_PORT=3000
+GITEA__DATABASE_TYPE=postgres
+GITEA__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+GITEA__DATABASE_PORT=${CNPG__DATABASE_PORT}
+GITEA__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
+GITEA__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
+GITEA__DATABASE_SSL_MODE=disable
+GITEA__DATABASE_NAME=gitea
