Add airflow installation script

--- a/.env
+++ b/.env
@@ -47,3 +47,20 @@ GITEA__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 GITEA__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 GITEA__DATABASE_SSL_MODE=disable
 GITEA__DATABASE_NAME=gitea
+
+# Airflow
+AIRFLOW__NAMESPACE=airflow
+AIRFLOW__DATABASE_NAME=airflow
+AIRFLOW__DATABASE_PROTOCOL=postgresql
+AIRFLOW__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+AIRFLOW__DATABASE_PORT=${CNPG__DATABASE_PORT}
+AIRFLOW__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
+AIRFLOW__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
+AIRFLOW__DATABASE_SSL_MODE=disable
+AIRFLOW__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
+AIRFLOW__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
+AIRFLOW__ADMIN_EMAIL=inho.kim@makinarocks.ai
+AIRFLOW__ADMIN_FIRST_NAME=${AIRFLOW__ADMIN_USERNAME}
+AIRFLOW__ADMIN_LAST_NAME=user
+AIRFLOW__HTTP_PORT=8080
+AIRFLOW__WORKERS_REPLICAS=3
