Implement client secret loader and validator

--- a/.env
+++ b/.env
@@ -32,6 +32,7 @@ KEYCLOAK__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 KEYCLOAK__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 KEYCLOAK__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 KEYCLOAK__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
+KEYCLOAK__REALM_NAME=master
 # Redis (인증용으로만 사용할 것이라면 지양하기)
 
 # Gitea
