Apply SSL and kubernetes OIDC

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+# Global
 CLUSTER_NAME=runway
 DOMAIN_HOST=runway.ai
 
@@ -65,3 +66,9 @@ AIRFLOW__ADMIN_FIRST_NAME=${AIRFLOW__ADMIN_USERNAME}
 AIRFLOW__ADMIN_LAST_NAME=user
 AIRFLOW__HTTP_PORT=8080
 AIRFLOW__WORKERS_REPLICAS=3
+
+# Kubernetes
+KUBERNETES__OIDC_CLIENT_ID=kubernetes
+KUBERNETES__OIDC_ISSUER_URL=https://keycloak.${DOMAIN_HOST}/realms/${KEYCLOAK__REALM_NAME}
+KUBERNETES__APISERVER_PORT=6443
+KUBERNETES__APISERVER_HOST=127.0.0.1
