--- a/.env
+++ b/.env
@@ -20,12 +20,15 @@ CNPG__DATABASE_NAME=runway
 CNPG__ADMIN_SECRET=runway-admin
 CNPG__DATABASE_SCHEMA=public
 CNPG__DATABASE_PORT=5432
+CNPG__R_SERVICE=cnpg-cluster-r
+CNPG__RW_SERVICE=cnpg-cluster-rw
+CNPG__RO_SERVICE=cnpg-cluster-ro
 
 # Keycloak
 KEYCLOAK__NAMESPACE=auth-system
 KEYCLOAK__HTTP_PORT=80
 KEYCLOAK__HTTPS_PORT=443
-KEYCLOAK__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+KEYCLOAK__DATABASE_HOST=${CNPG__RW__SERVICE}.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
 KEYCLOAK__DATABASE_PORT=${CNPG__DATABASE_PORT}
 KEYCLOAK__DATABASE_NAME=keycloak
 KEYCLOAK__DATABASE_SCHEMA=${CNPG__DATABASE_SCHEMA}
@@ -43,7 +46,7 @@ GITEA__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
 GITEA__ADMIN_EMAIL=inho.kim@makinarocks.ai
 GITEA__HTTP_PORT=3000
 GITEA__DATABASE_TYPE=postgres
-GITEA__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+GITEA__DATABASE_HOST=${CNPG__DATABASE_HOST}
 GITEA__DATABASE_PORT=${CNPG__DATABASE_PORT}
 GITEA__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 GITEA__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
@@ -54,7 +57,7 @@ GITEA__DATABASE_NAME=gitea
 AIRFLOW__NAMESPACE=airflow
 AIRFLOW__DATABASE_NAME=airflow
 AIRFLOW__DATABASE_PROTOCOL=postgresql
-AIRFLOW__DATABASE_HOST=cnpg-cluster-rw.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+AIRFLOW__DATABASE_HOST=${CNPG__DATABASE_HOST}
 AIRFLOW__DATABASE_PORT=${CNPG__DATABASE_PORT}
 AIRFLOW__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 AIRFLOW__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
@@ -64,6 +67,8 @@ AIRFLOW__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
 AIRFLOW__ADMIN_EMAIL=inho.kim@makinarocks.ai
 AIRFLOW__ADMIN_FIRST_NAME=${AIRFLOW__ADMIN_USERNAME}
 AIRFLOW__ADMIN_LAST_NAME=user
+AIRFLOW__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
+AIRFLOW__ADMIN_SECRET_KEY=password
 AIRFLOW__HTTP_PORT=8080
 AIRFLOW__WORKERS_REPLICAS=3
 
@@ -72,3 +77,17 @@ KUBERNETES__OIDC_CLIENT_ID=kubernetes
 KUBERNETES__OIDC_ISSUER_URL=https://keycloak.${DOMAIN_HOST}/realms/${KEYCLOAK__REALM_NAME}
 KUBERNETES__APISERVER_PORT=6443
 KUBERNETES__APISERVER_HOST=127.0.0.1
+
+# Openmetadata
+OPENMETADATA__OIDC_CLIENT_ID=openmetadata
+OPENMETADATA__DATABASE_HOST=${CNPG__RW_SERVICE}.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+OPENMETADATA__DATABASE_PORT=${CNPG__DATABASE_PORT}
+OPENMETADATA__DATABASE_DRIVER_CLASS=org.postgresql.Driver
+OPENMETADATA__DATABASE_PROTOCOL=postgresql
+OPENMETADATA__DATABASE_NAME=openmetadata
+OPENMETADATA__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
+OPENMETADATA__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
+OPENMETADATA__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
+OPENMETADATA__ADMIN_SECRET_KEY=password
+OPENMETADATA__NAMESPACE=openmetadata
+OPENMETADATA__HTTP_PORT=8585
