Add opensearch installation

--- a/.env
+++ b/.env
@@ -91,3 +91,10 @@ OPENMETADATA__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
 OPENMETADATA__ADMIN_SECRET_KEY=password
 OPENMETADATA__NAMESPACE=openmetadata
 OPENMETADATA__HTTP_PORT=8585
+
+# Opensearch
+OPENSEARCH__HTTP_PORT=9200
+OPENSEARCH__HTTPS_PORT=9300
+OPENSEARCH__NAMESPACE=opensearch
+OPENSEARCH__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
+OPENSEARCH__ADMIN_PASSWORD=1qa!QA2ws@WS
