Connect airflow to openmetadata

--- a/.env
+++ b/.env
@@ -13,22 +13,23 @@ ISTIO__NAMESPACE=istio-system
 
 # CNPG
 CNPG__OPERATOR_NAMESPACE=cnpg-system
-CNPG__CLUSTER_NAMESPACE=cnpg-database
+CNPG__DATABASE_NAMESPACE=cnpg-database
 CNPG__ADMIN_USERNAME=admin
 CNPG__ADMIN_PASSWORD=string1!
 CNPG__DATABASE_NAME=runway
 CNPG__ADMIN_SECRET=runway-admin
 CNPG__DATABASE_SCHEMA=public
-CNPG__DATABASE_PORT=5432
 CNPG__R_SERVICE=cnpg-cluster-r
 CNPG__RW_SERVICE=cnpg-cluster-rw
 CNPG__RO_SERVICE=cnpg-cluster-ro
+CNPG__DATABASE_HOST=${CNPG__RW_SERVICE}.${CNPG__DATABASE_NAMESPACE}.svc.cluster.local
+CNPG__DATABASE_PORT=5432
 
 # Keycloak
 KEYCLOAK__NAMESPACE=auth-system
 KEYCLOAK__HTTP_PORT=80
 KEYCLOAK__HTTPS_PORT=443
-KEYCLOAK__DATABASE_HOST=${CNPG__RW__SERVICE}.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+KEYCLOAK__DATABASE_HOST=${CNPG__DATABASE_HOST}
 KEYCLOAK__DATABASE_PORT=${CNPG__DATABASE_PORT}
 KEYCLOAK__DATABASE_NAME=keycloak
 KEYCLOAK__DATABASE_SCHEMA=${CNPG__DATABASE_SCHEMA}
@@ -64,12 +65,13 @@ AIRFLOW__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 AIRFLOW__DATABASE_SSL_MODE=disable
 AIRFLOW__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 AIRFLOW__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
-AIRFLOW__ADMIN_EMAIL=inho.kim@makinarocks.ai
+AIRFLOW__ADMIN_EMAIL=${AIRFLOW__ADMIN_USERNAME}@${DOMAIN_HOST}
 AIRFLOW__ADMIN_FIRST_NAME=${AIRFLOW__ADMIN_USERNAME}
 AIRFLOW__ADMIN_LAST_NAME=user
 AIRFLOW__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
 AIRFLOW__ADMIN_SECRET_KEY=password
 AIRFLOW__HTTP_PORT=8080
+AIRFLOW__EXECUTOR=LocalExecutor
 AIRFLOW__WORKERS_REPLICAS=3
 
 # Kubernetes
@@ -80,7 +82,7 @@ KUBERNETES__APISERVER_HOST=127.0.0.1
 
 # Openmetadata
 OPENMETADATA__OIDC_CLIENT_ID=openmetadata
-OPENMETADATA__DATABASE_HOST=${CNPG__RW_SERVICE}.${CNPG__CLUSTER_NAMESPACE}.svc.cluster.local
+OPENMETADATA__DATABASE_HOST=${CNPG__DATABASE_HOST}
 OPENMETADATA__DATABASE_PORT=${CNPG__DATABASE_PORT}
 OPENMETADATA__DATABASE_DRIVER_CLASS=org.postgresql.Driver
 OPENMETADATA__DATABASE_PROTOCOL=postgresql
@@ -96,5 +98,7 @@ OPENMETADATA__HTTP_PORT=8585
 OPENSEARCH__HTTP_PORT=9200
 OPENSEARCH__HTTPS_PORT=9300
 OPENSEARCH__NAMESPACE=opensearch
-OPENSEARCH__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
+OPENSEARCH__ADMIN_USERNAME=admin
 OPENSEARCH__ADMIN_PASSWORD=1qa!QA2ws@WS
+OPENSEARCH__ADMIN_SECRET=opensearch-admin
+OPENSEARCH__ADMIN_SECRET_KEY=password
