Downgrade airflow to integrate with openmetadata

--- a/.env
+++ b/.env
@@ -55,6 +55,9 @@ GITEA__DATABASE_SSL_MODE=disable
 GITEA__DATABASE_NAME=gitea
 
 # Airflow
+AIRFLOW__CHART_VERSION=1.16.0
+AIRFLOW__IMAGE_REPOSITORY=openmetadata/ingestion
+AIRFLOW__IMAGE_TAG=1.9.7
 AIRFLOW__NAMESPACE=airflow
 AIRFLOW__DATABASE_NAME=airflow
 AIRFLOW__DATABASE_PROTOCOL=postgresql
@@ -73,6 +76,9 @@ AIRFLOW__ADMIN_SECRET_KEY=password
 AIRFLOW__HTTP_PORT=8080
 AIRFLOW__EXECUTOR=LocalExecutor
 AIRFLOW__WORKERS_REPLICAS=3
+AIRFLOW__SCHEDULER_REPLICAS=1
+AIRFLOW__WEBSERVER_REPLICAS=1
+AIRFLOW__TRIGGERER_REPLICAS=1
 
 # Kubernetes
 KUBERNETES__OIDC_CLIENT_ID=kubernetes
