--- a/helm/airflow/templates/secrets/opensearch-secret.yaml
+++ b/helm/airflow/templates/secrets/opensearch-secret.yaml
@@ -26,9 +26,8 @@ kind: Secret
 metadata:
   name: {{ include "airflow.fullname" . }}-opensearch
   labels:
-    tier: airflow
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
