--- a/helm/airflow/templates/secrets/webserver-secret-key-secret.yaml
+++ b/helm/airflow/templates/secrets/webserver-secret-key-secret.yaml
@@ -20,7 +20,8 @@
 ############################################
 ## Airflow Webserver Flask Secret Key Secret
 ############################################
-{{- if and (semverCompare "<3.0.0" .Values.airflowVersion) .Values.webserver.enabled (not .Values.webserverSecretKeySecretName) }}
+{{- if not .Values.webserverSecretKeySecretName }}
+{{ $generated_secret_key := (randAlphaNum 32 | b64enc) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -29,16 +30,12 @@ metadata:
     tier: airflow
     component: webserver
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.webserverSecretAnnotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 type: Opaque
 data:
-  webserver-secret-key: {{ (.Values.webserverSecretKey) | default (randAlphaNum 32) | b64enc | quote }}
+  webserver-secret-key: {{ (default $generated_secret_key .Values.webserverSecretKey) | b64enc | quote }}
 {{- end }}
