--- a/helm/airflow/templates/api-server/api-server-service.yaml
+++ b/helm/airflow/templates/api-server/api-server-service.yaml
@@ -18,7 +18,7 @@
 */}}
 
 ################################
-## Airflow API Server Service
+## Airflow api-server Service
 #################################
 {{- if semverCompare ">=3.0.0" .Values.airflowVersion }}
 apiVersion: v1
