--- a/helm/airflow/templates/api-server/api-server-serviceaccount.yaml
+++ b/helm/airflow/templates/api-server/api-server-serviceaccount.yaml
@@ -18,7 +18,7 @@
 */}}
 
 ######################################
-## Airflow API Server ServiceAccount
+## Airflow api-server ServiceAccount
 ######################################
 {{- if and .Values.apiServer.serviceAccount.create (semverCompare ">=3.0.0" .Values.airflowVersion) }}
 apiVersion: v1
