--- a/helm/airflow/templates/secrets/elasticsearch-secret.yaml
+++ b/helm/airflow/templates/secrets/elasticsearch-secret.yaml
@@ -26,17 +26,12 @@ kind: Secret
 metadata:
   name: {{ include "airflow.fullname" . }}-elasticsearch
   labels:
-    tier: airflow
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.elasticsearch.secretAnnotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 type: Opaque
 data:
   {{- with .Values.elasticsearch.connection }}
