--- a/helm/airflow/templates/secrets/flower-secret.yaml
+++ b/helm/airflow/templates/secrets/flower-secret.yaml
@@ -26,18 +26,12 @@ kind: Secret
 metadata:
   name: {{ include "airflow.fullname" . }}-flower
   labels:
-    tier: airflow
-    component: flower
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.flower.secretAnnotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 type: Opaque
 data:
   basicAuth: {{ (printf "%s:%s" .Values.flower.username .Values.flower.password) | b64enc | quote }}
