--- a/helm/airflow/templates/secrets/git-ssh-key-secret.yaml
+++ b/helm/airflow/templates/secrets/git-ssh-key-secret.yaml
@@ -22,9 +22,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    tier: airflow
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
