--- a/helm/airflow/templates/secrets/kerberos-keytab-secret.yaml
+++ b/helm/airflow/templates/secrets/kerberos-keytab-secret.yaml
@@ -29,7 +29,7 @@ metadata:
     tier: airflow
     component: webserver
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
