--- a/helm/airflow/templates/secrets/metadata-connection-secret.yaml
+++ b/helm/airflow/templates/secrets/metadata-connection-secret.yaml
@@ -37,15 +37,11 @@ metadata:
   labels:
     tier: airflow
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.data.metadataConnection.secretAnnotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 type: Opaque
 data:
   {{- with .Values.data.metadataConnection }}
