--- a/helm/airflow/templates/secrets/pgbouncer-config-secret.yaml
+++ b/helm/airflow/templates/secrets/pgbouncer-config-secret.yaml
@@ -29,15 +29,11 @@ metadata:
     tier: airflow
     component: pgbouncer
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.pgbouncer.configSecretAnnotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
 type: Opaque
 data:
   pgbouncer.ini: {{ include "pgbouncer_config" . | b64enc }}
