--- a/helm/airflow/templates/secrets/redis-secrets.yaml
+++ b/helm/airflow/templates/secrets/redis-secrets.yaml
@@ -38,7 +38,7 @@ metadata:
     tier: airflow
     component: redis
     release: {{ .Release.Name }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ .Chart.Name }}
     heritage: {{ .Release.Service }}
     {{- with .Values.labels }}
       {{- toYaml . | nindent 4 }}
@@ -47,9 +47,6 @@ metadata:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-delete-policy": "before-hook-creation"
     "helm.sh/hook-weight": "0"
-    {{- with .Values.redis.passwordSecretAnnotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
 type: Opaque
 data:
   password: {{ (default $random_redis_password .Values.redis.password) | b64enc | quote }}
@@ -76,9 +73,6 @@ metadata:
     "helm.sh/hook": "pre-install"
     "helm.sh/hook-delete-policy": "before-hook-creation"
     "helm.sh/hook-weight": "0"
-    {{- with .Values.data.brokerUrlSecretAnnotations }}
-    {{- toYaml . | nindent 4 }}
-    {{- end }}
 type: Opaque
 data:
   {{- if .Values.redis.enabled }}
