--- a/manifests/airflow-vs.yaml
+++ b/manifests/airflow-vs.yaml
@@ -14,6 +14,6 @@ spec:
             prefix: /
       route:
         - destination:
-            host: airflow-api-server.${AIRFLOW__NAMESPACE}.svc.cluster.local
+            host: airflow-webserver.${AIRFLOW__NAMESPACE}.svc.cluster.local
             port:
               number: ${AIRFLOW__HTTP_PORT}
