Install seaweedfs and seaweedfs-csi-driver to support RWX volume

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Global
 CLUSTER_NAME=runway
 DOMAIN_HOST=runway.ai
+ARCH=arm64
+RWX_STORAGE_CLASS_NAME=seaweedfs-storage
 
 # Test Cluster
 TEST_CLUSETR__IMAGE_REPOSITORY=rancher/k3s
@@ -15,15 +17,20 @@ ISTIO__NAMESPACE=istio-system
 CNPG__OPERATOR_NAMESPACE=cnpg-system
 CNPG__DATABASE_NAMESPACE=cnpg-database
 CNPG__ADMIN_USERNAME=admin
-CNPG__ADMIN_PASSWORD=string1!
+CNPG__ADMIN_PASSWORD=MakinaRocks2017!@
 CNPG__DATABASE_NAME=runway
 CNPG__ADMIN_SECRET=runway-admin
+CNPG__ADMIN_SECRET_KEY=password
 CNPG__DATABASE_SCHEMA=public
 CNPG__R_SERVICE=cnpg-cluster-r
 CNPG__RW_SERVICE=cnpg-cluster-rw
 CNPG__RO_SERVICE=cnpg-cluster-ro
+CNPG__POOLER_RW_SERVICE=cnpg-cluster-pooler-rw
 CNPG__DATABASE_HOST=${CNPG__RW_SERVICE}.${CNPG__DATABASE_NAMESPACE}.svc.cluster.local
 CNPG__DATABASE_PORT=5432
+
+CNPG__POOLER_RW_REPLICAS=1
+CNPG__POOLER_RO_REPLICAS=1
 
 # Keycloak
 KEYCLOAK__NAMESPACE=auth-system
@@ -38,6 +45,7 @@ KEYCLOAK__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 KEYCLOAK__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 KEYCLOAK__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
 KEYCLOAK__REALM_NAME=master
+KEYCLOAK__REPLICAS=1
 # Redis (인증용으로만 사용할 것이라면 지양하기)
 
 # Gitea
@@ -72,10 +80,10 @@ AIRFLOW__ADMIN_EMAIL=${AIRFLOW__ADMIN_USERNAME}@${DOMAIN_HOST}
 AIRFLOW__ADMIN_FIRST_NAME=${AIRFLOW__ADMIN_USERNAME}
 AIRFLOW__ADMIN_LAST_NAME=user
 AIRFLOW__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
-AIRFLOW__ADMIN_SECRET_KEY=password
+AIRFLOW__ADMIN_SECRET_KEY=${CNPG__ADMIN_SECRET_KEY}
 AIRFLOW__HTTP_PORT=8080
 AIRFLOW__EXECUTOR=LocalExecutor
-AIRFLOW__WORKERS_REPLICAS=3
+AIRFLOW__WORKERS_REPLICAS=1
 AIRFLOW__SCHEDULER_REPLICAS=1
 AIRFLOW__WEBSERVER_REPLICAS=1
 AIRFLOW__TRIGGERER_REPLICAS=1
@@ -96,7 +104,7 @@ OPENMETADATA__DATABASE_NAME=openmetadata
 OPENMETADATA__DATABASE_USERNAME=${CNPG__ADMIN_USERNAME}
 OPENMETADATA__DATABASE_PASSWORD=${CNPG__ADMIN_PASSWORD}
 OPENMETADATA__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
-OPENMETADATA__ADMIN_SECRET_KEY=password
+OPENMETADATA__ADMIN_SECRET_KEY=${CNPG__ADMIN_SECRET_KEY}
 OPENMETADATA__NAMESPACE=openmetadata
 OPENMETADATA__HTTP_PORT=8585
 
@@ -104,7 +112,18 @@ OPENMETADATA__HTTP_PORT=8585
 OPENSEARCH__HTTP_PORT=9200
 OPENSEARCH__HTTPS_PORT=9300
 OPENSEARCH__NAMESPACE=opensearch
-OPENSEARCH__ADMIN_USERNAME=admin
-OPENSEARCH__ADMIN_PASSWORD=1qa!QA2ws@WS
-OPENSEARCH__ADMIN_SECRET=opensearch-admin
-OPENSEARCH__ADMIN_SECRET_KEY=password
+OPENSEARCH__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
+OPENSEARCH__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
+OPENSEARCH__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
+OPENSEARCH__ADMIN_SECRET_KEY=${CNPG__ADMIN_SECRET_KEY}
+
+# SeaweedFS
+SEAWEEDFS__NAMESPACE=seaweedfs
+SEAWEEDFS__MASTER_HTTP_PORT=9333
+SEAWEEDFS__MASTER_REPLICAS=1
+SEAWEEDFS__VOLUME_HTTP_PORT=8080
+SEAWEEDFS__VOLUME_REPLICAS=1
+SEAWEEDFS__FILER_HTTP_PORT=8888
+SEAWEEDFS__FILER_REPLICAS=1
+SEAWEEDFS__S3_HTTP_PORT=8333
+SEAWEEDFS__S3_REPLICAS=1
