Apply opensearch replicas

--- a/.env
+++ b/.env
@@ -116,6 +116,7 @@ OPENSEARCH__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 OPENSEARCH__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
 OPENSEARCH__ADMIN_SECRET=${CNPG__ADMIN_SECRET}
 OPENSEARCH__ADMIN_SECRET_KEY=${CNPG__ADMIN_SECRET_KEY}
+OPENSEARCH__REPLICAS=3
 
 # SeaweedFS
 SEAWEEDFS__NAMESPACE=seaweedfs
