--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Global
-CLUSTER_NAME=runway
-DOMAIN_HOST=runway.ai
+CLUSTER_NAME=ai-platform
+DOMAIN_HOST=platform.ai
 ARCH=arm64
 RWX_STORAGE_CLASS_NAME=seaweedfs-storage
 
@@ -17,9 +17,9 @@ ISTIO__NAMESPACE=istio-system
 CNPG__OPERATOR_NAMESPACE=cnpg-system
 CNPG__DATABASE_NAMESPACE=cnpg-database
 CNPG__ADMIN_USERNAME=admin
-CNPG__ADMIN_PASSWORD=MakinaRocks2017!@
-CNPG__DATABASE_NAME=runway
-CNPG__ADMIN_SECRET=runway-admin
+CNPG__ADMIN_PASSWORD=He110W0rld!@
+CNPG__DATABASE_NAME=platform
+CNPG__ADMIN_SECRET=platform-admin
 CNPG__ADMIN_SECRET_KEY=password
 CNPG__DATABASE_SCHEMA=public
 CNPG__R_SERVICE=cnpg-cluster-r
