--- a/helm/istio/platform-gateway/Chart.yaml
+++ b/helm/istio/platform-gateway/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: runway-gateway
+name: platform-gateway
 description: A Helm chart for Kubernetes
 version: 0.1.0
 appVersion: "0.1.0"
