--- a/helm/istio/ai-platform-gateway/Chart.yaml
+++ b/helm/istio/ai-platform-gateway/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: platform-gateway
+name: ai-platform-gateway
 description: A Helm chart for Kubernetes
 version: 0.1.0
 appVersion: "0.1.0"
