Implement token decoding script

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ ISTIO__NAMESPACE=istio-system
 CNPG__OPERATOR_NAMESPACE=cnpg-system
 CNPG__DATABASE_NAMESPACE=cnpg-database
 CNPG__ADMIN_USERNAME=admin
-CNPG__ADMIN_PASSWORD=He110W0rld!@
+CNPG__ADMIN_PASSWORD=A1P1@tf0rm
 CNPG__DATABASE_NAME=platform
 CNPG__ADMIN_SECRET=platform-admin
 CNPG__ADMIN_SECRET_KEY=password
