Remove personal email

--- a/.env
+++ b/.env
@@ -28,7 +28,6 @@ CNPG__RO_SERVICE=cnpg-cluster-ro
 CNPG__POOLER_RW_SERVICE=cnpg-cluster-pooler-rw
 CNPG__DATABASE_HOST=${CNPG__RW_SERVICE}.${CNPG__DATABASE_NAMESPACE}.svc.cluster.local
 CNPG__DATABASE_PORT=5432
-
 CNPG__POOLER_RW_REPLICAS=1
 CNPG__POOLER_RO_REPLICAS=1
 
@@ -53,7 +52,7 @@ KEYCLOAK__REPLICAS=1
 GITEA__NAMESPACE=gitea
 GITEA__ADMIN_USERNAME=${CNPG__ADMIN_USERNAME}
 GITEA__ADMIN_PASSWORD=${CNPG__ADMIN_PASSWORD}
-GITEA__ADMIN_EMAIL=inho.kim@makinarocks.ai
+GITEA__ADMIN_EMAIL=${GITEA__ADMIN_USERNAME}@${DOMAIN_HOST}
 GITEA__SERVICE_NAME=gitea-http
 GITEA__HTTP_PORT=3000
 GITEA__DATABASE_TYPE=postgres
