Add capsule installation

--- a/.env
+++ b/.env
@@ -132,3 +132,6 @@ SEAWEEDFS__FILER_HTTP_PORT=8888
 SEAWEEDFS__FILER_REPLICAS=1
 SEAWEEDFS__S3_HTTP_PORT=8333
 SEAWEEDFS__S3_REPLICAS=1
+
+# Capsule
+CAPSULE__NAMESPACE=capsule
