--- a/src/gpu-pool/crds/gpupool.yaml
+++ b/src/gpu-pool/crds/gpupool.yaml
@@ -15,29 +15,44 @@ spec:
             spec:
               type: object
               required:
-                - gpuProducts
+                - nodes
                 - nodeLabel
-                - queues
               properties:
-                # Pool에 등록할 GPU Product 이름 목록
-                gpuProducts:
+                nodes:
                   type: array
+                  nullable: true
+                  default: null
                   items:
-                    type: string
-                  description: "List of GPU Product names that belong to this pool"
-                # Node Label에서 GPU Product를 확인할 때 참조할 key
+                    type: object
+                    required:
+                      - name
+                    properties:
+                      name:
+                        type: string
+                        description: "Node name"
+                      gpus:
+                        type: array
+                        nullable: true
+                        default: null
+                        items:
+                          type: object
+                          required:
+                            - name
+                          properties:
+                            name:
+                              type: string
+                              description: "GPU product name"
+                            count:
+                              type: integer
+                              minimum: 1
+                              nullable: true
+                              default: null
+                              description: "Number of GPUs of this type. If null, all available GPUs of this type on the node are used."
+                  description: "List of pool members with node-specific GPU configurations. If null, all nodes with matching GPU products are included."
+                # 전역 GPU Product 목록 (members가 null일 때 사용)
                 nodeLabel:
                   type: string
                   description: "Node label key to check for GPU Product (e.g., nvidia.com/gpu.product)"
-                queues:
-                  type: array
-                  items:
-                    type: string
-                  description: "List of queues that belong to this pool"
-                # Fractional GPU 사용 여부 (선택)
-                fractionalGpuAllowed:
-                  type: boolean
-                  description: "Whether fractional GPU usage is allowed in this pool"
       subresources:
         status: {}
   scope: Cluster
