Add installation scripts related to gpu management

--- a/.env
+++ b/.env
@@ -137,3 +137,13 @@ SEAWEEDFS__S3_REPLICAS=1
 CAPSULE__NAMESPACE=capsule-system
 CAPSULE__PROXY_SERVICE_NAME=capsule-proxy
 CAPSULE__PROXY_HTTP_PORT=9001
+
+# GPU Operator
+GPU_OPERATOR__NAMESPACE=gpu-operator
+
+# KAI Scheduler
+KAI_SCHEDULER__VERSION=v0.9.4
+KAI_SCHEDULER__NAMESPACE=kai-scheduler
+
+# HAMi
+HAMI__NAMESPACE=hami
